发布到服务器

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     </dependencies>
 
     <build>
-
+        <finalName>chapter1</finalName>
         <plugins>
             <!-- Compile -->
             <plugin>
