--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,13 @@
-<<<<<<< HEAD
-# Eclipse project files  
-.classpath  
+# Maven #
+target/
+
+# IDEA #
+.idea/
+*.iml
+
+# Eclipse #
+.settings
+.metadata/
+.classpath
 .project
-
-#Generated files
-/bin/
-/target/
-/.externalToolBuilders/
-.settings/
-=======
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
->>>>>>> ff3ff4b4200f1b0f2e98835854cbc5aff797f861
+Servers/
